Ensure mail chimp input fields aligns to the top

--- a/sass/_mailchimp.scss
+++ b/sass/_mailchimp.scss
@@ -80,6 +80,7 @@
     margin-bottom: 0;
     display: inline-block;
     width: 30%;
+    vertical-align: top;
   }
 
   @include breakpoint(screen-md) {
